improved deployment, refactored paths, added list, all and clear-cache option

--- a/tldr-sharp/tldr-sharp.csproj
+++ b/tldr-sharp/tldr-sharp.csproj
@@ -47,6 +47,10 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="mscorlib" />
+    <Reference Include="NaturalSort.Extension, Version=1.0.2.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\packages\NaturalSort.Extension.1.0.2\lib\net47\NaturalSort.Extension.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="SharpCompress, Version=0.22.0.0, Culture=neutral, PublicKeyToken=afb0a02973931d96">
       <HintPath>..\packages\SharpCompress.0.22.0\lib\net45\SharpCompress.dll</HintPath>
       <Private>True</Private>
