Many fixes and improvements - Added optional bash and zsh completions - Added OS - Improved compatibility for older Mono versions - Fixed help formatting - Added option to show markdown version of a page - Added option to render markdown file - Improved language and os option - Cleaned dependencies - Cleanup build

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: csharp
 solution: tldr-sharp.sln
 script:
-- msbuild /p:Configuration=Release tldr-sharp.sln
+- msbuild /p:Configuration=Release tldr-sharp.sln /p:AllowedReferenceRelatedFileExtensions=none
 - bash scripts/test.sh
 
 after_success:
