--- a/tldr-sharp/packages.config
+++ b/tldr-sharp/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Mono.Data.Sqlite" version="1.0.61" targetFramework="net45" />
   <package id="Mono.Options" version="5.3.0.1" targetFramework="net471" />
   <package id="NaturalSort.Extension" version="1.0.2" targetFramework="net471" />
   <package id="SharpCompress" version="0.22.0" targetFramework="net471" />
