--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,16 @@
 language: csharp
+
+addons:
+  apt:
+    packages:
+    - fakeroot
+
 solution: tldr-sharp.sln
-before_install:
-  - sudo apt-get update
-  - sudo apt-get install -y zip
 script:
 - msbuild /p:Configuration=Release tldr-sharp.sln /p:AllowedReferenceRelatedFileExtensions=none
 - bash scripts/test.sh
 
-after_success:
+before_deploy:
 - bash scripts/deploy.sh
 
 deploy:
@@ -18,6 +21,7 @@ deploy:
   file: 
     - tldr-sharp/bin/v*.tar.gz
     - tldr-sharp/bin/v*.zip
+    - tldr-sharp/bin/*.deb
     - scripts/linux_install.sh
   skip_cleanup: true
   on:
