--- a/tldr-sharp/packages.config
+++ b/tldr-sharp/packages.config
@@ -4,4 +4,5 @@
   <package id="Mono.Options" version="5.3.0.1" targetFramework="net471" />
   <package id="NaturalSort.Extension" version="1.0.2" targetFramework="net471" />
   <package id="SharpCompress" version="0.22.0" targetFramework="net471" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net45" />
 </packages>
