Added self-updater, refactored update
Added an option to update tldr-sharp automatically on Unix-based
operating systems.

--- a/tldr-sharp/tldr-sharp.csproj
+++ b/tldr-sharp/tldr-sharp.csproj
@@ -69,6 +69,8 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SelfUpdater.cs" />
+    <Compile Include="Updater.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
