--- a/tldr-sharp/tldr-sharp.csproj
+++ b/tldr-sharp/tldr-sharp.csproj
@@ -69,6 +69,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cache.cs" />
+    <Compile Include="Index.cs" />
+    <Compile Include="Page.cs" />
+    <Compile Include="PageComparer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SelfUpdater.cs" />
