Improved windows compatibility
- Added ansi support for windows
- Refactored ansi colors
- Added sqlite3.dll to deploy

--- a/tldr-sharp/tldr-sharp.csproj
+++ b/tldr-sharp/tldr-sharp.csproj
@@ -69,6 +69,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Ansi.cs" />
     <Compile Include="Cache.cs" />
     <Compile Include="Index.cs" />
     <Compile Include="Page.cs" />
