--- a/tldr-sharp/packages.config
+++ b/tldr-sharp/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ConsoleTools" version="0.5.3" targetFramework="net461" />
   <package id="Mono.Data.Sqlite" version="1.0.61" targetFramework="net45" />
-  <package id="Mono.Options" version="5.3.0.1" targetFramework="net471" />
+  <package id="Mono.Options" version="6.6.0.161" targetFramework="net461" />
   <package id="NaturalSort.Extension" version="2.1.0" targetFramework="net461" />
-  <package id="SharpCompress" version="0.23.0" targetFramework="net461" />
+  <package id="SharpCompress" version="0.24.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net45" />
 </packages>
