--- a/tldr-sharp/tldr-sharp.csproj
+++ b/tldr-sharp/tldr-sharp.csproj
@@ -11,7 +11,7 @@
     <AssemblyName>tldr_sharp</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <LangVersion>7</LangVersion>
+    <LangVersion>8</LangVersion>
     <Nullable>disable</Nullable>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -45,20 +45,24 @@
     <Prefer32bit>true</Prefer32bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DustInTheWind.ConsoleTools, Version=0.5.3.42795, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\packages\ConsoleTools.0.5.3\lib\net45\DustInTheWind.ConsoleTools.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Mono.Data.Sqlite, Version=4.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756">
       <HintPath>..\packages\Mono.Data.Sqlite.1.0.61\lib\net40\Mono.Data.Sqlite.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Mono.Options, Version=5.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\Mono.Options.5.3.0.1\lib\net4-client\Mono.Options.dll</HintPath>
+    <Reference Include="Mono.Options, Version=6.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\packages\Mono.Options.6.6.0.161\lib\net40\Mono.Options.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="NaturalSort.Extension, Version=2.1.0.0, Culture=neutral, PublicKeyToken=null">
       <HintPath>..\packages\NaturalSort.Extension.2.1.0\lib\net40\NaturalSort.Extension.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="SharpCompress, Version=0.23.0.0, Culture=neutral, PublicKeyToken=afb0a02973931d96">
-      <HintPath>..\packages\SharpCompress.0.23.0\lib\net45\SharpCompress.dll</HintPath>
+    <Reference Include="SharpCompress, Version=0.24.0.0, Culture=neutral, PublicKeyToken=afb0a02973931d96">
+      <HintPath>..\packages\SharpCompress.0.24.0\lib\net45\SharpCompress.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -71,6 +75,7 @@
   <ItemGroup>
     <Compile Include="Ansi.cs" />
     <Compile Include="Cache.cs" />
+    <Compile Include="CustomSpinner.cs" />
     <Compile Include="Index.cs" />
     <Compile Include="Page.cs" />
     <Compile Include="PageComparer.cs" />
