--- a/tldr-sharp/tldr-sharp.csproj
+++ b/tldr-sharp/tldr-sharp.csproj
@@ -45,8 +45,8 @@
     <Prefer32bit>true</Prefer32bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DustInTheWind.ConsoleTools, Version=0.5.3.42795, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\ConsoleTools.0.5.3\lib\net45\DustInTheWind.ConsoleTools.dll</HintPath>
+    <Reference Include="DustInTheWind.ConsoleTools, Version=0.5.4.16658, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\packages\ConsoleTools.0.5.4\lib\net45\DustInTheWind.ConsoleTools.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Mono.Data.Sqlite, Version=4.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756">
@@ -75,10 +75,13 @@
   <ItemGroup>
     <Compile Include="Ansi.cs" />
     <Compile Include="Cache.cs" />
+    <Compile Include="CustomConsole.cs" />
     <Compile Include="CustomSpinner.cs" />
     <Compile Include="Index.cs" />
     <Compile Include="Page.cs" />
     <Compile Include="PageComparer.cs" />
+    <Compile Include="PageController.cs" />
+    <Compile Include="PageParser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SelfUpdater.cs" />
