--- a/tldr-sharp/packages.config
+++ b/tldr-sharp/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ConsoleTools" version="0.5.4" targetFramework="net461" />
+  <package id="Iso639" version="1.0.0" targetFramework="net461" />
   <package id="Mono.Data.Sqlite" version="1.0.61" targetFramework="net45" />
   <package id="Mono.Options" version="6.6.0.161" targetFramework="net461" />
   <package id="NaturalSort.Extension" version="2.2.1" targetFramework="net461" />
