--- a/tldr-sharp/tldr-sharp.csproj
+++ b/tldr-sharp/tldr-sharp.csproj
@@ -50,6 +50,10 @@
       <HintPath>..\packages\ConsoleTools.0.5.4\lib\net45\DustInTheWind.ConsoleTools.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Iso639, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\packages\Iso639.1.0.0\lib\netstandard2.0\Iso639.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Mono.Data.Sqlite, Version=4.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756">
       <HintPath>..\packages\Mono.Data.Sqlite.1.0.61\lib\net40\Mono.Data.Sqlite.dll</HintPath>
       <Private>True</Private>
@@ -102,6 +106,7 @@
     <Compile Include="CustomConsole.cs" />
     <Compile Include="CustomSpinner.cs" />
     <Compile Include="Index.cs" />
+    <Compile Include="Locale.cs" />
     <Compile Include="Page.cs" />
     <Compile Include="PageComparer.cs" />
     <Compile Include="PageController.cs" />
