--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ on:
       - v*.*.*
 env:
   RELEASE_VERSION: $(echo $GITHUB_REF_NAME | cut -d'v' -f2)
-  DOTNET_VERSION: 6.0
+  DOTNET_VERSION: 8.0
 
 jobs:
   build:
@@ -19,9 +19,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-dotnet@v3
+      - uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: ${{ env.DOTNET_VERSION }}.x
+          dotnet-version: ${{ env.DOTNET_VERSION }}
       - name: Build tldr-sharp
         run: |
           dotnet publish -c Release --self-contained false -o 'publish/${{ matrix.runtime }}' -r '${{ matrix.runtime }}'
@@ -38,9 +38,9 @@ jobs:
     
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-dotnet@v3
+      - uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '${{ env.DOTNET_VERSION }}.x'
+          dotnet-version: ${{ env.DOTNET_VERSION }}
       - name: Restore cached build
         uses: actions/cache/restore@v3
         with:
