--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        runtime: [win-x64, win-x86, linux-x64, linux-musl-x64, linux-arm, linux-arm64, osx-x64]
+        runtime: [win-x64, win-x86, win-arm64, linux-x64, linux-musl-x64, linux-arm, linux-arm64, osx-x64, osx-arm64]
 
     steps:
       - uses: actions/checkout@v3
@@ -54,7 +54,7 @@ jobs:
     needs: [build, test]
     strategy:
       matrix:
-        runtime: [win-x64, win-x86]
+        runtime: [win-x64, win-x86, win-arm64]
     steps:
       - uses: actions/checkout@v3
       - name: Restore cached build
@@ -148,7 +148,7 @@ jobs:
     needs: [build,test]
     strategy:
       matrix:
-        runtime: [win-x64, win-x86, linux-x64, linux-musl-x64, linux-arm, linux-arm64, osx-x64]
+        runtime: [win-x64, win-x86, win-arm64, linux-x64, linux-musl-x64, linux-arm, linux-arm64, osx-x64, osx-arm64]
     steps:
       - uses: actions/checkout@v3
       - name: Restore cached build
